@@ -1,3 +1,8 @@
+2002-08-14  James M. Cape  <jcape@ignore-your.tv>
+
+	* src/themes/Esco/metacity-theme-1.xml: use button positioning
+	theme stuff.
+
 2002-08-14  Mark McLoughlin  <mark@skynet.ie>
 
 	* src/screen.c: (set_number_of_spaces_hint), move from
